# lzma-fpga

./: Cargo.toml  LICENSE  README.md  lzma2-driver-sequence.md  lzma2_compression_engine.sv  lzma2_compression_pkg.sv  lzma2_crc.sv  lzma2_range_encoder.sv  lzma2_top.sv
fpga/: lzma2_match_finder.sv  lzma2_memory.sv  lzma2_pkg.sv
src/: error.rs  lib.rs
src/device/: metrics.rs  mod.rs  pcie.rs  pcie_trait_impl.rs
src/transfer/: mod.rs
src/utils/: mod.rs
